--- a/radius-relocation/styles/Navigation.module.css
+++ b/radius-relocation/styles/Navigation.module.css
@@ -1,7 +1,7 @@
 .nav {
   position: absolute;
   z-index: 2;
-  height: 50px;
+  height: 60px;
   width: 100vw;
   padding: 10px;
   background: rgb(36, 36, 36);
@@ -34,3 +34,9 @@
   text-decoration: none;
   -webkit-text-stroke: 0.25px #128b7a;
 }
+
+.login {
+  margin-left: auto;
+  height: 72px;
+}
+
