implemented tailwind and form progress circle

--- a/radius-relocation/styles/Navigation.module.css
+++ b/radius-relocation/styles/Navigation.module.css
@@ -4,7 +4,7 @@
   height: 60px;
   width: 100vw;
   padding: 10px;
-  background: rgb(36, 36, 36);
+  background: #242424;
   color: white;
   display: flex;
   align-items: center;
