--- a/radius-relocation/styles/CreateRadiusStep2.module.css
+++ b/radius-relocation/styles/CreateRadiusStep2.module.css
@@ -29,7 +29,7 @@
 }
 .inputStreet {
   border-style: none;
-  background-color: rgba(255, 255, 255, 0.5);
+  background-color: #ffffff80;
   height: 4rem;
   width: 30em;
   box-shadow: 0px 2px 10px 2px rgba(0, 0, 0, 0.25);
