--- a/radius-relocation/styles/RadiusProfiles.module.css
+++ b/radius-relocation/styles/RadiusProfiles.module.css
@@ -11,19 +11,15 @@
 
 }
 .CreateRadiusButton {
-  background: none;
-  color: black;
-  border-style: none;
-  background-color: rgba(223, 205, 205, 1);
+  background-color: #dfcdcd;
   width: auto;
   border-radius: 25px;
   min-height: 3rem;
   border: black solid 1px;
   margin-left: 1rem;
   margin-right: auto;
-  margin-top: 65px;
+  margin-top: 78px;
   display: flex;
-  justify-content: center;
   align-items: center;
   margin-bottom: 1rem;
   cursor: pointer;
@@ -52,22 +48,23 @@
 .RadiusProfiles {
   display: flex;
   flex-direction: column;
-  align-items: center;
+  /* align-items: center;
   justify-content: flex-start;
   border: 0;
   padding: 0;
   width: 100%;
-  height: 100%;
+  height: 100%; */
   max-height: 35%;
   box-shadow: 0px 2px 5px 2px rgba(0, 0, 0, 0.5);
   margin-bottom: 1rem;
   border-radius: 5px;
   cursor: pointer;
 }
+
 .RadiusProfiles h3 {
   position: absolute;
   z-index: 1;
-  background-color: rgba(0, 0, 0, 0.2);
+  background-color: #00000033;
   width: 100%;
   height: 2rem;
   margin-top: 0;
