--- a/radius-relocation/styles/globals.css
+++ b/radius-relocation/styles/globals.css
@@ -1,4 +1,9 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 @import url('https://fonts.googleapis.com/css2?family=Oswald&family=Rubik&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans&family=Merriweather:wght@300;700&display=swap');
 
 html,
 body {
