--- a/radius-relocation/styles/CreateRadiusStep3.module.css
+++ b/radius-relocation/styles/CreateRadiusStep3.module.css
@@ -13,8 +13,8 @@
   height: 3rem;
   width: 30%;
   border: rgba(255, 206, 206, 0.5) solid 1px;
-  color: rgba(255, 255, 255, 0.75);
-  /* box-shadow: 0px 2px 10px 2px rgba(0, 0, 0, 0.25); */
+  color: #000000bf;
+  box-shadow: 0px 2px 10px 2px rgba(0, 0, 0, 0.25);
   padding-left: 1rem;
 }
 .input:nth-child(2) {
@@ -96,8 +96,8 @@
 }
 
 .commentsBox {
-  background-color: rgba(90, 88, 88, 0);
-  border: rgba(255, 206, 206, 0.5) solid 1px;
+  background-color: #ffffff40;
+  border: #00000080 solid 1px;
   color: rgba(255, 255, 255, 0.75);
 }
 .commentsBox::placeholder {
