--- a/radius-relocation/styles/globals.css
+++ b/radius-relocation/styles/globals.css
@@ -5,19 +5,38 @@
 @import url('https://fonts.googleapis.com/css2?family=Oswald&family=Rubik&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans&family=Merriweather:wght@300;700&display=swap');
 
-html,
-body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-}
-
-a {
-  color: inherit;
-  text-decoration: none;
-}
-
-* {
-  box-sizing: border-box;
+@layer components {
+  .flex-row-start {
+    @apply flex flex-row justify-start items-start
+  }
+  .flex-col-start {
+    @apply flex flex-col justify-start items-start
+  }
+  .flex-row-center {
+    @apply flex flex-row justify-center items-center
+  }
+  .flex-col-center {
+    @apply flex flex-col justify-center items-center
+  }
+  .flex-row-end-center {
+    @apply flex flex-row justify-end items-center
+  }
+  .flex-col-end-center {
+    @apply flex flex-col justify-end items-center
+  }
+  .flex-row-between-center {
+    @apply flex flex-row justify-between items-center
+  }
+  .flex-col-between-center {
+    @apply flex flex-col justify-between items-center
+  }
+  .form-label { 
+    @apply text-3xl font-IBMPlexSans mb-2 mt-4
+  }
+  .form-input {
+    @apply bg-inputField h-16 w-52 text-formInputText shadow-input pl-4
+  }
+  .commentBox {
+    @apply bg-commentBox border-black text-offWhite
+  }
 }
