--- a/radius-relocation/styles/globals.css
+++ b/radius-relocation/styles/globals.css
@@ -2,8 +2,8 @@
 @tailwind components;
 @tailwind utilities;
 
-@import url('https://fonts.googleapis.com/css2?family=Oswald&family=Rubik&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans&family=Merriweather:wght@300;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Francois+One&display=swap');
+
 
 @layer components {
   .flex-row-start {
@@ -30,9 +30,7 @@
   .flex-col-between-center {
     @apply flex flex-col justify-between items-center
   }
-  .form-label { 
-    @apply text-3xl font-IBMPlexSans mb-2 mt-4
-  }
+
   .form-input {
     @apply bg-inputField h-16 w-52 text-formInputText shadow-input pl-4
   }
